<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp"
    android:orientation="vertical"
    android:id="@+id/fragment_container">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_username"/>

    <EditText
        android:id="@+id/password_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_username_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password_password_hint"
            android:inputType="textPassword"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/password_symbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_symbol_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_length_hint" />

    <EditText
        android:id="@+id/password_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_service"/>

    <EditText
        android:id="@+id/password_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_service_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_date"/>

    <Button
        android:id="@+id/password_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_date_hint"/>

    <Button
        android:id="@+id/password_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_generate"/>

    <Button
        android:id="@+id/password_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_save"/>

</LinearLayout>